// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when post is an ad when it has adTargetingData when it is a boosted ad renders correctly 1`] = `
<div
  className="archive-item"
>
  <div
    className="ati-item fb-item fb-undefined"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<div>Hello world</div>",
      }
    }
  />
  <div
    className="targeting"
  >
    <h4>
      Ad Targeting
    </h4>
    <div
      className="btn btn-outline-success"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-rocket fa-w-16 "
        data-icon="rocket"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505.12019,19.09375c-1.18945-5.53125-6.65819-11-12.207-12.1875C460.716,0,435.507,0,410.40747,0,307.17523,0,245.26909,55.20312,199.05238,128H94.83772c-16.34763.01562-35.55658,11.875-42.88664,26.48438L2.51562,253.29688A28.4,28.4,0,0,0,0,264a24.00867,24.00867,0,0,0,24.00582,24H127.81618l-22.47457,22.46875c-11.36521,11.36133-12.99607,32.25781,0,45.25L156.24582,406.625c11.15623,11.1875,32.15619,13.15625,45.27726,0l22.47457-22.46875V488a24.00867,24.00867,0,0,0,24.00581,24,28.55934,28.55934,0,0,0,10.707-2.51562l98.72834-49.39063c14.62888-7.29687,26.50776-26.5,26.50776-42.85937V312.79688c72.59753-46.3125,128.03493-108.40626,128.03493-211.09376C512.07526,76.5,512.07526,51.29688,505.12019,19.09375ZM384.04033,168A40,40,0,1,1,424.05,128,40.02322,40.02322,0,0,1,384.04033,168Z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      Post was boosted
    </div>
    <div
      className="reason badge badge-primary"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-dot-circle fa-w-16 "
        data-icon="dot-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm80 248c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <span
        className="reason-name"
      >
        test
      </span>
    </div>
  </div>
</div>
`;

exports[`when post is an ad when it has adTargetingData when it is not a boosted ad renders correctly 1`] = `
<div
  className="archive-item"
>
  <div
    className="ati-item fb-item fb-undefined"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<div>Hello world</div>",
      }
    }
  />
  <div
    className="targeting"
  >
    <h4>
      Ad Targeting
    </h4>
    <div
      className="reason badge badge-primary"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-dot-circle fa-w-16 "
        data-icon="dot-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm80 248c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <span
        className="reason-name"
      >
        test
      </span>
    </div>
  </div>
</div>
`;

exports[`when post is an ad when it has no adTargetingData renders correctly 1`] = `
<div
  className="archive-item"
>
  <div
    className="ati-item fb-item fb-undefined"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<div>Hello world</div>",
      }
    }
  />
</div>
`;
